--- a/.github/workflows/publish-blog.yml
+++ b/.github/workflows/publish-blog.yml
@@ -27,3 +27,4 @@ jobs:
       - uses: enriikke/gatsby-gh-pages-action@v2
         with:
           access-token: ${{ secrets.ACCESS_TOKEN }}
+          deploy-branch: main
